# souschef-app

./: .gitignore  pyproject.toml  railway.toml
.github/workflows/: e2e.yml  keepwarm.yml
agents/: auth-and-security.md  database.md  order-and-receipts.md  price-tracking.md  sessions-changelog.md
code/mealrunner/: database.py  db.py  kroger.py  planner.py  pricing.py  reconcile.py  regulars.py
code/mealrunner/web/: api.py  app.py  auth.py
code/souschef/: brands.py  cli.py  database.py  db.py  feedback.py  grocery.py  kroger.py  models.py  normalize.py  pantry.py  planner.py  recipes.py  reconcile.py  regulars.py  stores.py  violations.py
code/souschef/web/: api.py  app.py  auth.py
data/: seed_ingredient_database.yaml  seed_recipes_common.yaml
design/: ingredient-database-research.md  onboarding-spec.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js
frontend/e2e/: README.md  app-basics.spec.js  fixtures.js  global-teardown.js  grocery-longitudinal.spec.js  helpers.js  picker.spec.js
frontend/public/: terms.html
frontend/src/: App.jsx  global.css  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AdminFeedback.jsx  AdminStats.jsx  AdminStats.module.css  ApronIcon.jsx  AutocompleteInput.jsx  BentSpoonIcon.jsx  BuildListFlow.jsx  CameraCapture.jsx  ClippyGuide.jsx  ErrorBoundary.jsx  ErrorBoundary.module.css  FeedbackFab.jsx  GroceryPage.jsx  GroceryPage.module.css  HouseholdInvitePrompt.jsx  HouseholdInvitePrompt.module.css  LoginPage.jsx  LoginPage.module.css  MealPickerSheet.jsx  (+19 more)
(+4 files in other folders)
