[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "souschef"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
kroger = [
    "requests>=2.31",
]
reconcile = [
    "anthropic>=0.40",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "google-auth>=2.29",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
